Parser/grammer.txt

<bool_expr> := <bool_term> (<low_order_bool_op> <bool_term>)*

<bool_term> := <bool_factor> (<high_order_bool_op> <bool_factor>)*

<bool_factor> := <bool> | <not> <bool_expr> | <math_expr>

<math_expr> := <math_term> (<low_order_op> <math_term>)*

<math_term> := <math_factor> (<high_order_op> <math_factor>)*

<math_factor> := <int> | <low_order_op> <math_expr> | ( <math_expr> )



<int> :=  <non_zero_dig> <int> | <non_zero_dig> | 0
<non_zero_dig> := 1..9
<high_order_op> := * | / | // | %
<low_order_op> := + | -

<bool> := true | false
<not> := !
<low_order_bool_op> := && | || | <equels>
<high_order_bool_op> := < | <= | > | >=
<euqels> := == | != 
